@@ -9,6 +9,7 @@ module Fairy
 
   CONF["emperor2"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev" 
   CONF["gentoo"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
+  CONF["giant"].RUBY_BIN = ENV["FAIRY_RUBY"] || "ruby-dev"
 
 ##CONF.MASTER_HOST = #NO SYSTEM DEFAULT VALUE
   CONF.MASTER_HOST = "emperor2"
@@ -16,6 +17,7 @@ module Fairy
 
   CONF["emperor2"].HOME = ENV["FAIRY_HOME"] || File.expand_path(".")
   CONF["gentoo"].HOME = ENV["FAIRY_HOME"] || File.expand_path(".")
+  CONF["giant"].HOME = ENV["FAIRY_HOME"] || File.expand_path(".")
 
 ##CONF.HOME = ENV["FAIRY_HOME"]
 ##CONF.BIN = CONF.HOME+"/bin" 
@@ -32,9 +34,10 @@ module Fairy
 ##CONF.POSTQUEUING_POLICY = {:queuing_class => :OnMemoryQueue}
   CONF.POSTQUEUING_POLICY = {:queuing_class => :PoolQueue}
 #  CONF.POSTQUEUING_POLICY = {:queuing_class => :FileBufferdQueue}
+
+##CONF.POSTQUEUE_MAX_TRANSFER_SIZE = 10000
 ##CONF.POOLQUEUE_POOL_THRESHOLD = 1000
 ##CONF.ONMEMORY_SIZEDQUEUE_SIZE = 1000
-#CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
 ##CONF.BARRIER_BUFFERING_POLICY = {:queuing_class => :OnMemoryQueue}
@@ -54,6 +57,8 @@ module Fairy
 
 ##CONF.VF_ROOT = CONF.HOME+"/Repos"
   CONF["emperor2"].VF_ROOT = CONF.HOME+"/test/Repos"
+  CONF["gentoo"].VF_ROOT = CONF.HOME+"/test/Repos"
+  CONF["giant"].VF_ROOT = CONF.HOME+"/test/Repos"
 ##CONF.VF_PREFIX = `hostname`.chomp 
 #- CONF.VF_PREFIX use client setting.
 #  (ja_JP.utf-8: CONF.VF_PREFIXはクライアントのものが使われる)
@@ -66,12 +71,11 @@ module Fairy
 ##CONF.LOG_LEVEL = :DEBUG
 #CONF.LOG_LEVEL = :INFO
 ##CONF.LOG_IMPORT_NTIMES_POP = 10000
-  CONF["emperor2"].LOG_IMPORT_NTIMES_POP = 10000
 
 ##  CONF.PROCESSOR_MON_ON = true
 ##  CONF.PROCESSOR_MON_INTERVAL = 60
-  CONF["emperor2"].PROCESSOR_MON_INTERVAL = 60
 ##  CONF.PROCESSOR_MON_PSFORMAT = "stat,vsz,rss,sz,pmem,pcpu,nlwp,time,wchan"
+##  CONF.PROCESSOR_MON_OBJECTSPACE_INSPECT_ON = false
 
 ##CONF.USE_RESOLV_REPLACE = false
 
@@ -80,6 +84,7 @@ module Fairy
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
 ##CONF.DEBUG_MONITOR_ON = false
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
+##CONF.DEBUG_BUG49 = false
 
 ##CONF.PROCESS_LIFE_MANAGE_INTERVAL = nil
 
