@@ -4,7 +4,7 @@
 module Fairy
   class FairyAPP<BaseAPP
 
-    SUBCOMMANDS = ["cp", "rm", "master", "node"]
+    SUBCOMMANDS = ["cp", "rm", "master", "node", "inspector"]
 
     def initialize
       super
